--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,10 +1,196 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>{{title}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="{% static 'core/style.css' %}" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <style type="text/css">
+        #map {
+            height: 400px;
+        }
+    </style>
+
 </head>
 <body>
 
+<section class="wrapper-image">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="{% static 'core/johndeere_logo.png' %}" alt="johndeere_logo"
+                     style="width:240px;height:100px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active fs-4" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fs-4" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fs-4" href="#" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Dropdown link
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-shrink-0 dropdown">
+                <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
+                   data-bs-toggle="dropdown"
+                   aria-expanded="false">
+                    <img src="{% static 'core/empty_avatar.png' %}" alt="mdo" class="rounded-circle"
+                         width="60" height="60">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end text-small shadow">
+                    <li><a class="dropdown-item" href="#">New project...</a></li>
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <div class="content">
+            <br/>
+            <br/>
+            <form style="margin: auto;">
+
+                <div class="row justify-content-center">
+                    <div class="col-md-4 text-center">
+                        <input type="email" class="form-control form-control-lg" id="exampleFormControlInput1"
+                               placeholder="Enter search">
+                    </div>
+                    <div class="col-md-2 text-center">
+                        <select class="form-select form-select-lg" aria-label="Default select example">
+                            <option selected>Search by</option>
+                            <option value="1">by part</option>
+                            <option value="2">by model</option>
+                            <option value="3">by system</option>
+                        </select>
+                    </div>
+                </div>
+            </form>
+            <br/>
+            <div class=" d-md-flex justify-content-center">
+                <a href="#">
+                    <button type="button" class="btn btn-warning fs-5 me-md-4 btn-lg">Search</button>
+                </a>
+            </div>
+            <br/>
+            <br/>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <div class="card"  style="width: 28rem; height: 23rem;">
+                        <img src="{% static 'core/ams_deere.jpeg' %}" class="card-img-top"  alt="ams_deere" width="600"
+                             height="400">
+                        <div class="card-body" style="margin: auto;">
+                            <a href="#" class="btn btn-warning stretched-link">AMS attachments</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 28rem; height: 23rem;">
+                        <img src="{% static 'core/engine_overhaul_kit.jpg' %}" class="card-img-top"
+                             alt="engine_overhaul_kit"
+                             width="600" height="400">
+                        <div class="card-body" style="margin: auto;">
+                            <a href="#" class="btn btn-warning stretched-link">Engine overhaul kits</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card" style="width: 30rem; height: 23rem;">
+                        <img src="{% static 'core/maintenance_parts.webp' %}" class="card-img-top" alt="maintenance_kit"
+                             width="400" height="300">
+                        <div class="card-body" style="margin: auto;">
+                            <a href="#" class="btn btn-warning stretched-link">Maintenance kits</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    <div class="row shop-locations">
+        <div class="col-4 ps-4">
+            <h3 class="text-center">Our locations:</h3>
+            <ul>
+            {% for address in addresses %}
+                <li class="mt-4">{{address.1}}</li>
+            {% endfor %}
+            </ul>
+        </div>
+        <div class="col-8">
+ <div id="map" class="map"></div>
+        </div>
+    </div>
+<!--<div class="container mt-5">-->
+<!--        <h2>Django Google Maps Multiple Markers Example - Tuts-Station.com</h2>-->
+<!--        <div id="map"></div>-->
+<!--    </div>-->
+
+    <script type="text/javascript">
+        function initMap() {
+
+            var locations = {{ data|safe }};
+            var adresses = {{ addresses|safe }};
+
+            const map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 9,
+                center: { lat: 48.470458, lng: 35.042548, },
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            });
+
+            var infowindow = new google.maps.InfoWindow();
+
+            var marker, i;
+
+            for (i = 0; i < locations.length; i++) {
+                  marker = new google.maps.Marker({
+                    position: new google.maps.LatLng(locations[i]['latitude'], locations[i]['longitude']),
+                    map: map
+                  });
+
+                  google.maps.event.addListener(marker, 'click', (function(marker, i) {
+                    return function() {
+                      infowindow.setContent(adresses[i]);
+                      infowindow.open(map, marker);
+                    }
+                  })(marker, i));
+
+            }
+        }
+
+        window.initMap = initMap;
+    </script>
+
+    <script type="text/javascript"
+        src="https://maps.google.com/maps/api/js?key={{ google_maps_api_key }}&callback=initMap" ></script>
 </body>
 </html>
