--- a/src/static/core/style.css
+++ b/src/static/core/style.css
@@ -19,9 +19,11 @@
 .content {
     position: relative;
 }
+
 .shop-locations {
     margin-top: 100px;
 }
+
 .cart-icon {
     font-size: 18px;
 }
@@ -33,7 +35,7 @@
 .nav-cart-icon {
     font-size: 30px;
     color: white;
-    margin: 0 30px;
+    margin-top: 45px;
 }
 
 .tractor-icon {
@@ -53,4 +55,20 @@
 
 .btn-sidebar:hover {
     border-color: white;
+}
+.avatar {
+    margin: 30px 0 30px 30px;
+}
+
+@media (max-width: 768px) {
+.shop-locations {
+    margin: 20px auto;
+}
+}
+
+.img-card {
+    float: left;
+    width:  550px;
+    height: 300px;
+    object-fit: cover;
 }
