--- a/src/templates/catalogue/parts_view.html
+++ b/src/templates/catalogue/parts_view.html
@@ -5,8 +5,28 @@
 <div class="content">
     <div class="container">
         <div class="row">
-            <div class="col-3">
-                <div class="flex-shrink-0 p-3 bg-secondary" style="width: 280px;">
+            <div class="col-12 col-lg-3">
+                <div class="flex-shrink-0 p-3 bg-secondary">
+                    <form style="margin: auto;" method="get" action="catalogue/parts">
+                        <label for="select-form" class="text-white fs-5 ps-1">Choose category:</label>
+                        <select class="form-select form-select-lg mb-2" aria-label="Default select example"
+                                name="field" id="select-form">
+                            <option selected value="part_number">by part number</option>
+                            <option value="machine_model">by model</option>
+                            <option value="part_name">by part name</option>
+                        </select>
+                        <div class="mb-2">
+                            <input type="search" class="form-control form-control-lg" name="search"
+                                   placeholder="searching value">
+                        </div>
+
+
+                        <div class="d-flex justify-content-center mb-5">
+                            <button type="submit" class="btn btn-warning fs-5 me-md-4 btn-lg">Search
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </button>
+                        </div>
+                    </form>
 
                     <span class="fs-4 fw-semibold text-white">
                         Filter by
@@ -52,6 +72,7 @@
                                                value="{{system.machine_system}}" id="checkbox_system"
                                                name="machine_system">
                                         <label class="form-check-label text-white fs-6 fw-bold" for="checkbox_system">
+
                                             {{system.get_machine_system_display}}
                                         </label>
                                     </div>
@@ -75,34 +96,34 @@
                             </div>
                         </div>
                     </form>
-
                 </div>
             </div>
 
-            <div class="col-9">
+            <div class="col-lg-9">
                 <p class="fs-1 fw-bolder text-center mb-0"> John Deere parts list</p>
                 <hr/>
                 {% for part in parts %}
                 <div class="row">
 
-                    <div class="col d-flex flex-column justify-content-center">
-                        <a href="{% url 'part_detail' part.part_number%}">
+                    <div class="col-12 col-lg-4">
+                        <a href="{% url 'part_detail' part.part_number%}"
+                           class="d-none d-lg-flex justify-content-center">
                             <img src="{{part.image.url}}" alt="part" width="200px" class="me-5">
                         </a>
                     </div>
 
                     <div class="col d-flex flex-column justify-content-center">
-                         <div class="row">
-                             <div class="col">
-                        <p>Part number:</p>
-                        <p>Part name:</p>
-                        <p>Price:</p>
-                             </div>
-                             <div class="col">
-                        <p class="fw-bolder">{{part.part_number}}</p>
-                        <p class="fw-bolder">{{part.part_name}}</p>
-                        <p class="fw-bolder">{{part.price}}</p>
-                             </div>
+                        <div class="row">
+                            <div class="col">
+                                <p>Part number:</p>
+                                <p>Part name:</p>
+                                <p>Price:</p>
+                            </div>
+                            <div class="col">
+                                <p class="fw-bolder">{{part.part_number}}</p>
+                                <p class="fw-bolder">{{part.part_name}}</p>
+                                <p class="fw-bolder">{{part.price}}</p>
+                            </div>
                         </div>
                     </div>
 
