--- a/src/templates/catalogue/parts_view.html
+++ b/src/templates/catalogue/parts_view.html
@@ -8,7 +8,7 @@
             <div class="col-12 col-lg-3">
                 <div class="flex-shrink-0 p-3 bg-secondary">
                     <form style="margin: auto;" method="get" action="catalogue/parts">
-                        <label for="select-form" class="text-white fs-5 ps-1">Choose category:</label>
+                        <label for="select-form" class="fs-4 fw-bold text-white">Choose category:</label>
                         <select class="form-select form-select-lg mb-2" aria-label="Default select example"
                                 name="field" id="select-form">
                             <option selected value="part_number">by part number</option>
