--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -66,10 +66,9 @@
                         <ul class="dropdown-menu dropdown-menu-end text-small shadow">
                             {% if not user.is_authenticated%}
                             <li><a class="dropdown-item" href="{% url 'login'%}">Login</a></li>
-                            {% endif %}
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
-                            {% if user.is_authenticated%}
-                            <li><a class="dropdown-item" href="{% url 'user_profile' user.pk %}">Profile</a></li>
+                            <li><a class="dropdown-item" href="#">Sign in</a></li>
+                            {% else %}
+                            <li><a class="dropdown-item" href="{% url 'user_profile'%}">Profile</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
