--- a/src/templates/catalogue/part_detail.html
+++ b/src/templates/catalogue/part_detail.html
@@ -30,11 +30,17 @@
                     <div class="col">
                         <div class="row">
                             <div class="col mb-3">
+                                {% if part.stock_quantity == 0 %}
+                                    <button type="submit" class="btn btn-secondary w-100">
+                                        + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
+                                    </button>
+                                {% else %}
                                 <a href="#">
                                     <button type="submit" class="btn btn-warning w-100">
                                         + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
                                     </button>
                                 </a>
+                                {% endif %}
                             </div>
                             <div class="row text-center">
                                 <div class="col">
@@ -75,19 +81,23 @@
             </div>
         </div>
 
-        <button class="btn btn-toggle align-items-center rounded collapsed fs-3 fw-bold text-dark "
+        <button class="btn btn-toggle btn-outline-warning align-items-center rounded collapsed fs-3 fw-bold text-dark "
                 data-bs-toggle="collapse" data-bs-target="#dashboard-collapse"
                 aria-expanded="false" type='button'>
             Reviews
             <i class="fa-solid fa-arrow-down-short-wide"></i>
         </button>
 
+
         <div class="collapse" id="dashboard-collapse" style="">
-<a href="{% url 'create_comment' user.pk part.part_number %}">
-            <button type="button" class="btn btn-success">
-                Leave comment
-                <i class="fa-solid fa-pen"></i></button>
-    </a>
+            {% if user.is_authenticated%}
+            <a href="{% url 'create_comment' part.part_number %}">
+                <button type="button" class="btn btn-success mt-3">
+                    Leave comment
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+            </a>
+            {% endif %}
             <hr/>
             {% for comment in comments%}
             <p>{{comment.user.first_name}} {{comment.user.last_name}}</p>
