--- a/src/templates/catalogue/parts_view.html
+++ b/src/templates/catalogue/parts_view.html
@@ -129,11 +129,17 @@
                     <div class="col d-flex flex-column justify-content-center">
                         <div class="row">
                             <div class="col mb-3">
+                                {% if part.stock_quantity == 0 %}
+                                    <button type="submit" class="btn btn-secondary w-100">
+                                        + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
+                                    </button>
+                                {% else %}
                                 <a href="#">
                                     <button type="submit" class="btn btn-warning w-100">
                                         + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
                                     </button>
                                 </a>
+                                {% endif %}
                             </div>
                         </div>
 
@@ -156,7 +162,15 @@
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
+
                         </div>
+                        {% if part.stock_quantity == 0 %}
+                        <div class="badge bg-secondary text-wrap mt-3" style="width: 6rem;">unavailable</div>
+                        {% elif part.stock_quantity <= 5 %}
+                        <div class="badge bg-warning text-wrap mt-3" style="width: 6rem;">low quantity</div>
+                        {% else %}
+                        <div class="badge bg-success text-wrap mt-3" style="width: 6rem;">available</div>
+                        {% endif %}
                     </div>
                 </div>
                 <hr/>
