--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -54,7 +54,9 @@
                         </ul>
                     </div>
                     <div class="d-flex ms-auto">
+                        <a href="{% url 'cart_view' %}">
                         <i class="fa-solid fa-cart-shopping nav-cart-icon"></i>
+                            </a>
                         <div class="flex-shrink-0 dropdown">
                         <a href="#" class="d-block link-light text-decoration-none dropdown-toggle avatar"
                            data-bs-toggle="dropdown"
