--- a/src/templates/catalogue/part_detail.html
+++ b/src/templates/catalogue/part_detail.html
@@ -29,6 +29,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="row">
+                            <form method="get" action="{% url 'add_to_cart' part.part_number %}">
                             <div class="col mb-3">
                                 {% if part.stock_quantity == 0 %}
                                     <button type="submit" class="btn btn-secondary w-100">
@@ -44,7 +45,7 @@
                             </div>
                             <div class="row text-center">
                                 <div class="col">
-                                    <button class="btn btn-secondary"
+                                    <button class="btn btn-secondary" type="button"
                                             onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepDown()">
                                         <i class="fas fa-minus"></i>
                                     </button>
@@ -54,12 +55,13 @@
                                            class="form-control form-control-xs"/>
                                 </div>
                                 <div class="col">
-                                    <button class="btn btn-secondary"
+                                    <button class="btn btn-secondary" type="button"
                                             onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepUp()">
                                         <i class="fas fa-plus"></i>
                                     </button>
                                 </div>
                             </div>
+                            </form>
                         </div>
                     </div>
                 </div>
