--- a/src/static/core/style.css
+++ b/src/static/core/style.css
@@ -80,3 +80,18 @@
 .confirm-icon {
     font-size: 150px;
 }
+
+.discount-tag {
+    font-size: 50px;
+    color: orange;
+}
+
+#part_pic_container {
+    position:relative;
+}
+
+#discount_tag {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
