--- a/src/templates/accounts/profile.html
+++ b/src/templates/accounts/profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html'%}
 {% load static %}
 {% block content %}
-<div class="container" xmlns="http://www.w3.org/1999/html">
+<div class="container">
     <div class="container rounded mt-5 mb-5">
         <form method="POST">
             {% csrf_token %}
@@ -13,7 +13,6 @@
                             src="{{form.photo.value.url}}"
                             alt="avatar">
                     </div>
-
                     {{form.photo}}
                 </div>
                 <div class="col-md-6">
@@ -30,8 +29,10 @@
                             </div>
                         </div>
                         <div class="row mt-3">
+
                             <div class="col-md-12"><label class="labels">Email</label>
-                               <input class = "form-control rounded border border-success p-2 mb-2" value="{{user.email}}">
+                                <input class="form-control rounded border border-success p-2 mb-2"
+                                       name="email" id="email" value="{{user.email}}">
                             </div>
                             <div class="col-md-12"><label class="labels">Phone number</label>
                                 {{form.phone_number}}
