--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -35,27 +35,20 @@
             <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link fs-4" href="{% url 'parts_view'%}">Parts</a>
+                        <a class="nav-link fs-4" href="{% url 'parts_view'%}">Parts catalogue</a>
                     </li>
-                    <li class="nav-item">
-                        <div class="row">
-                            <div class="col">
-                                <p class="text-warning fs-5 mb-0">Contact phone</p>
-                                <div class="row">
-                                    <div class="col">
-                                        <p class="text-warning fs-4">+38-041-123-45-67</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                    </li>
                 </ul>
             </div>
             <div class="d-flex ms-auto">
+                <div class="d-flex flex-column justify-content-center me-4">
+                    <a href="tel:+380411234567" class="text-warning fs-5 text-decoration-none"><i
+                            class="fa-solid fa-square-phone"></i> +38 (041) 123 45 67</a>
+                </div>
                 <a href="{% url 'cart_view' %}">
                     <i class="fa-solid fa-cart-shopping nav-cart-icon"></i>
                 </a>
+
                 <div class="flex-shrink-0 dropdown">
                     <a href="#" class="d-block link-light text-decoration-none dropdown-toggle avatar"
                        data-bs-toggle="dropdown"
@@ -78,6 +71,7 @@
                         {% endif %}
                     </ul>
                 </div>
+
             </div>
         </div>
     </div>
