--- a/src/templates/catalogue/part_detail.html
+++ b/src/templates/catalogue/part_detail.html
@@ -1,13 +1,16 @@
 {% extends 'base.html'%}
 {% load static %}
-
+{% load discount_percent %}
 {% block content %}
 <br>
 <div class="content">
     <div class="container">
         <div class="row">
-            <div class="col d-flex flex-column justify-content-center">
+            <div class="col d-flex flex-column justify-content-center" id="part_pic_container">
                 <img src="{{part.image.url}}" alt="part" width="250px" class="me-5">
+                {% if part.discount_price < 1%}
+                <span id="discount_tag"><i class="fa-solid fa-tags discount-tag"></i></span>
+                {% endif %}
             </div>
             <div class="col d-flex flex-column justify-content-center">
                 <div class="row">
@@ -15,12 +18,18 @@
                         <p class="fs-5">Part number:</p>
                         <p class="fs-5">Part name:</p>
                         <p class="fs-5">Price:</p>
+                        {% if part.discount_price < 1%}
+                        <p class="fs-5">Discount:</p>
+                        {% endif %}
                         <p class="fs-5">Machine system:</p>
                     </div>
                     <div class="col">
                         <p class="fs-5 fw-bolder">{{part.part_number}}</p>
                         <p class="fs-5 fw-bolder">{{part.part_name}}</p>
                         <p class="fs-5 fw-bolder">{{part.price}}</p>
+                        {% if part.discount_price < 1%}
+                        <p class="fs-5 fw-bolder text-danger">{{part.discount_price| discount_percent}}%</p>
+                        {% endif %}
                         <p class="fs-5 fw-bolder">{{part.get_machine_system_display}}</p>
                     </div>
                 </div>
@@ -30,37 +39,37 @@
                     <div class="col">
                         <div class="row">
                             <form method="get" action="{% url 'add_to_cart' part.part_number %}">
-                            <div class="col mb-3">
-                                {% if part.stock_quantity == 0 %}
+                                <div class="col mb-3">
+                                    {% if part.stock_quantity == 0 %}
                                     <button type="submit" class="btn btn-secondary w-100">
                                         + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
                                     </button>
-                                {% else %}
-                                <a href="#">
-                                    <button type="submit" class="btn btn-warning w-100">
-                                        + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
-                                    </button>
-                                </a>
-                                {% endif %}
-                            </div>
-                            <div class="row text-center">
-                                <div class="col">
-                                    <button class="btn btn-secondary" type="button"
-                                            onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepDown()">
-                                        <i class="fas fa-minus"></i>
-                                    </button>
+                                    {% else %}
+                                    <a href="#">
+                                        <button type="submit" class="btn btn-warning w-100">
+                                            + Add to cart <i class="fa-solid fa-cart-plus cart-icon"></i>
+                                        </button>
+                                    </a>
+                                    {% endif %}
                                 </div>
-                                <div class="col">
-                                    <input id="form1" min="0" name="quantity" value="1" type="number"
-                                           class="form-control form-control-xs"/>
+                                <div class="row text-center">
+                                    <div class="col">
+                                        <button class="btn btn-secondary" type="button"
+                                                onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepDown()">
+                                            <i class="fas fa-minus"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col">
+                                        <input id="form1" min="0" name="quantity" value="1" type="number"
+                                               class="form-control form-control-xs"/>
+                                    </div>
+                                    <div class="col">
+                                        <button class="btn btn-secondary" type="button"
+                                                onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepUp()">
+                                            <i class="fas fa-plus"></i>
+                                        </button>
+                                    </div>
                                 </div>
-                                <div class="col">
-                                    <button class="btn btn-secondary" type="button"
-                                            onclick="this.parentNode.parentNode.querySelector('input[type=number]').stepUp()">
-                                        <i class="fas fa-plus"></i>
-                                    </button>
-                                </div>
-                            </div>
                             </form>
                         </div>
                     </div>
