--- a/src/templates/accounts/profile.html
+++ b/src/templates/accounts/profile.html
@@ -31,8 +31,7 @@
                         <div class="row mt-3">
 
                             <div class="col-md-12"><label class="labels">Email</label>
-                                <input class="form-control rounded border border-success p-2 mb-2"
-                                       name="email" id="email" value="{{user.email}}">
+                                {{form.email}}
                             </div>
                             <div class="col-md-12"><label class="labels">Phone number</label>
                                 {{form.phone_number}}
