--- a/src/templates/core/index.html
+++ b/src/templates/core/index.html
@@ -53,7 +53,7 @@
                             <img src="{% static 'core/ams_deere.jpeg' %}" class="card-img-top img-fluid img-card"
                                  alt="ams_deere">
                         </a>
-                        <div class="card-body m-auto">
+                        <div class="card-body m-auto fs-5">
                             AMS attachments
                         </div>
                     </div>
@@ -69,7 +69,7 @@
                                  class="card-img-top img-fluid img-card"
                                  alt="engine_overhaul_kit">
                         </a>
-                        <div class="card-body m-auto">
+                        <div class="card-body m-auto fs-5">
                             Engine overhaul kits
                         </div>
 
@@ -85,7 +85,7 @@
                                  class="card-img-top img-fluid img-card"
                                  alt="maintenance_kit">
                         </a>
-                        <div class="card-body m-auto">
+                        <div class="card-body m-auto fs-5">
                             Maintenance kits
                             <!--                            <p>Do-it-yourself John Deere machines maintenance made easy. All the exact parts you need to ensure your machine keeps running efficiently.</p>-->
                         </div>
