auth backand arg added, env variable placed to .env file

--- a/src/templates/accounts/sent_email_confirmation.html
+++ b/src/templates/accounts/sent_email_confirmation.html
@@ -6,9 +6,8 @@
 {% block content %}
 <div class="container">
     <div class="content">
-        <p class="text-center fs-3 fst-italic mt-5">Please enter in your email {{user.email}} to complete the
-            registration</p>
-        <p class="text-center fs-3 fst-italic mt-5">If you didn't receive the confirmation, please check your email.</p>
+        <p class="text-center fs-3 fst-italic mt-5">We send confirmation letter to your email address: {{user.email}}</p>
+        <p class="text-center fs-5 mt-5">In order to complete the registration process, check your inbox and click on the link in the email we have just sent you. If it is not there, please check your junk mail folder.</p>
     </div>
 </div>
 {% endblock %}
